search.css
#navbar {
    width: 670px;
    height: 40px;
    margin-left: 150px;
}

#navbar ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    margin-left: 11px;
    margin-right: 11px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
}

#navbar ul li {
    height: 38px;
    line-height: 43px;
    padding: 5px;
}

#navbar a {
    padding: 8px;
    text-decoration: none;
    color: #6B6B6B;
}

.active {
    border-bottom: solid 3px#036ffc;
}

#footer {
    border-top: solid 1px #DDDDDD;
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 50px;
    background-color: #F0F0F0;
}

#footer ul {
    list-style-type: none;
    padding: 0;
    margin: 0; 
    margin-left: 150px;
    margin-right: 11px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 15px;
}

#footer a {
    padding: 16px;
    text-decoration: none;
    color: #6B6B6B;
}

.nav-item {
    margin-top: 16px;
    margin-bottom: 16px;
}

.nav-left, .footer-left {
    display: block;
    float: left;
}

.nav-right, .footer-right {
    display: block;
    float: right;
}

.search-header {
    height: 110px;
    border-bottom: solid 1px #DDD;
}

.search-header a {
    color: #6B6B6B;
}

.search-logo {
    height: 30px;
    padding-top: 20px;
    padding-left: 16px;
    padding-right: 30px;
    float: left;
}

.search {
    width: 660px;
    padding: 10px;
    margin-top: 10px;
    margin-left: 12px;
    border-radius: 20px;
    font-size: 16px;
    border: 1px solid #DBDBDB;
}

#search-findings {
    clear: both;
    margin-left: 170px;
    width: 660px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
}

#search-findings a {
    text-decoration: none;
    color:#1329a8;
}

.float-right {
    display: block;
    float: right;
    margin-top: 16px;
    padding: 10px;
}

.user {
    padding: 0;
    margin: 0;
    padding: 10px;
}

.user-circle {
    height: 40px;
    width: 40px;
    border-radius: 100px;
    background-color: #397fc4;
    color: #fff;
    font-size: 20px;
    padding: 0;
    margin: 0;
}

.site-address {
    color: grey;
}

.site-head {
    font-size: 20px;
}

.site-description {
    color: grey;
}

.accordion-frame {
    border: solid 1px #EEE;
    border-radius: 20px;
    margin: 10px;
    margin-bottom: 20px;
}

.accordion {
    border: solid 1px #EEE;
    background-color: #FFF;
    color: #444;
    cursor: pointer;
    padding: 10px;
    width: 100%;
    text-align: left;
    outline: none;
    transition: 0.4s;
}

.accordion-head {
    font-size: 18px;
}

.panel {
    padding: 0 18px;
    background-color: white;
    display: none;
    overflow: hidden;
}

